baml_language/crates/baml_tests/snapshots/parser_error_recovery/baml_tests__parser_error_recovery__02_parser__invalid_syntax.snap
---
source: target/debug/build/baml_tests-eb448e436f8a003a/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF "class"
    KW_CLASS "class"
  INTEGER_LITERAL "123"
  WORD "Invalid"
  L_BRACE "{"
  WORD "field"
  WORD "string"
  R_BRACE "}"
  ENUM_DEF
    KW_ENUM "enum"
    WORD "Status"
    L_BRACE "{"
    ENUM_VARIANT "ACTIVE"
      WORD "ACTIVE"
    ENUM_VARIANT "INACTIVE"
      WORD "INACTIVE"
    ENUM_VARIANT "PENDING"
      WORD "PENDING"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "Foo"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
    LLM_FUNCTION_BODY
      L_BRACE "{"
      CLIENT_FIELD "// Missing return type
  client GPT4"
        KW_CLIENT "client"
        WORD "GPT4"
      R_BRACE "}"

=== ERRORS ===
Error: Expected class name, found IntegerLiteral
   ╭─[ 0:1:7 ]
   │
 1 │ class 123Invalid {  // Invalid class name
   │       ─┬─  
   │        ╰─── Expected class name, found IntegerLiteral
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected LBrace, found IntegerLiteral
   ╭─[ 0:1:7 ]
   │
 1 │ class 123Invalid {  // Invalid class name
   │       ─┬─  
   │        ╰─── Expected LBrace, found IntegerLiteral
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected top-level declaration, found IntegerLiteral
   ╭─[ 0:1:7 ]
   │
 1 │ class 123Invalid {  // Invalid class name
   │       ─┬─  
   │        ╰─── Expected top-level declaration, found IntegerLiteral
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected top-level declaration, found Word
   ╭─[ 0:1:10 ]
   │
 1 │ class 123Invalid {  // Invalid class name
   │          ───┬───  
   │             ╰───── Expected top-level declaration, found Word
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected top-level declaration, found LBrace
   ╭─[ 0:1:18 ]
   │
 1 │ class 123Invalid {  // Invalid class name
   │                  ┬  
   │                  ╰── Expected top-level declaration, found LBrace
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected top-level declaration, found Word
   ╭─[ 0:2:3 ]
   │
 2 │   field string
   │   ──┬──  
   │     ╰──── Expected top-level declaration, found Word
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected top-level declaration, found Word
   ╭─[ 0:2:9 ]
   │
 2 │   field string
   │         ───┬──  
   │            ╰──── Expected top-level declaration, found Word
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected top-level declaration, found RBrace
   ╭─[ 0:3:1 ]
   │
 3 │ }
   │ ┬  
   │ ╰── Expected top-level declaration, found RBrace
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected type, found LBrace
    ╭─[ 0:10:19 ]
    │
 10 │ function Foo() -> {  // Missing return type
    │                   ┬  
    │                   ╰── Expected type, found LBrace
    │ 
    │ Note: Error code: E0010
────╯

Error: Expected LLM function missing 'prompt' field, found RBrace
    ╭─[ 0:12:1 ]
    │
 12 │ }
    │ ┬  
    │ ╰── Expected LLM function missing 'prompt' field, found RBrace
    │ 
    │ Note: Error code: E0010
────╯
